# board-service/cmd/api/main.go
@@ -32,8 +32,8 @@ import (
 // @license.name  MIT
 // @license.url   https://opensource.org/licenses/MIT
 
-// @host      localhost:8000
 // @BasePath  /api
+// @schemes   http https
 
 // @securityDefinitions.apikey BearerAuth
 // @in header
